fix sorting news, add news correct photos

--- a/public/locales/news-be.json
+++ b/public/locales/news-be.json
@@ -1,42 +1,51 @@
 [
   {
     "id": 1,
-    "date": "10.01.2026",
-    "title": "Рэгістрацыя фонда Bulwark",
-    "excerpt": "Наш фонд афіцыйна зарэгістраваны і пачаў сваю дзейнасць...",
+    "date": "17.11.2025",
+    "title": "Пачатак працы фонду Bulwark",
+    "excerpt": "Мы абвяшчаем аб пачатку дзейнасці фонду для прававой і псіхалагічнай падтрымкі беларускіх добраахвотнікаў...",
     "image": "/img/news/news-1.webp",
-    "content": "<h3>Афіцыйны старт</h3><p>Фонд Bulwark атрымаў юрыдычную рэгістрацыю. Гэта дазваляе нам легальна працаваць і адкрыта супрацоўнічаць з партнёрамі.</p><h3>Місія</h3><p>Мы падтрымліваем беларускіх дабраахвотнікаў ва Украіне праз юрыдычную і псіхалагічную дапамогу, праграмы па барацьбе з залежнасцямі і стварэнне валанцёрскага хаба.</p><p>Гэта першы крок да сістэмнай і празрыстай працы.</p>"
+    "content": "<h3>Сістэмная падтрымка</h3><p>Фонд Bulwark створаны для аказання дапамогі беларусам, якія ўдзельнічалі ў абароне Украіны і апынуліся ва ўразлівым становішчы з-за адсутнасці стабільнага прававога статусу і вымушанай эміграцыі.</p><h3>Нашы кірункі</h3><ul><li>Бесплатныя юрыдычныя кансультацыі па легалізацыі.</li><li>Псіхалагічная дапамога для пераадолення траўматычнага досведу.</li><li>Праца ў праваабарончай логіцы для абароны правоў бенефіцыяраў.</li></ul><p>Наша мэта — забяспечыць дастойную і бяспечную будучыню для тых, хто рызыкаваў жыццём дзеля свабоды.</p>"
   },
   {
     "id": 2,
-    "date": "15.01.2026",
-    "title": "Набыццё дамену для сайта",
-    "excerpt": "Мы набылі ўласны дамен і рыхтуем пляцоўку для камунікацыі...",
+    "date": "01.12.2025",
+    "title": "Запуск афіцыйных сацыяльных сетак",
+    "excerpt": "Цяпер Bulwark даступны ў Telegram, Instagram, Facebook і LinkedIn для больш шчыльнай камунікацыі...",
     "image": "/img/news/news-2.webp",
-    "content": "<h3>Уласная пляцоўка</h3><p>Фонд Bulwark атрымаў уласны дамен, які стане асновай для нашага сайта.</p><h3>Зручнасць і празрыстасць</h3><p>На сайце будуць размяшчацца навіны, справаздачы і інструкцыі для дабраахвотнікаў. Гэта важны крок для стварэння надзейнай інфармацыйнай базы.</p>"
+    "content": "<h3>Будзем на сувязі</h3><p>Мы адкрылі афіцыйныя старонкі ў папулярных сацыяльных сетках. Гэта дазволіць нам быць бліжэй да нашых бенефіцыяраў і грамадства.</p><h3>Што вы знойдзеце ў нашых сетках?</h3><ul><li>Аператыўныя навіны аб дзейнасці фонду.</li><li>Тлумачэнні складаных прававых працэдур.</li><li>Гісторыі і магчымасці для падтрымкі.</li><li>Абнаўленні для добраахвотнікаў і іх сем’яў.</li></ul>"
   },
+
   {
     "id": 3,
-    "date": "05.02.2026",
-    "title": "Запуск Telegram-бота",
-    "excerpt": "Мы стварылі Telegram-бот для хуткай камунікацыі і падтрымкі...",
+    "date": "16.02.2026",
+    "title": "Запуск платформы Bulwark: новы этап падтрымкі",
+    "excerpt": "Мы афіцыйна запускаем адзіны інфармацыйны рэсурс для дапамогі беларускім дабраахвотнікам. Празрыстасць, база ведаў і сістэмная падтрымка — зараз у адным месцы.",
     "image": "/img/news/news-3.webp",
-    "content": "<h3>Новы інструмент</h3><p>Telegram-бот фонду Bulwark дапамагае атрымліваць навіны, знаходзіць кантакты і хутка далучацца да валанцёрскіх праграм.</p><h3>Даступнасць</h3><p>Бот працуе кругласутачна і робіць камунікацыю больш простай і эфектыўнай.</p>"
+    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Місія платформы</a> <a href='#news-features'>Магчымасці</a> <a href='#news-partners'>Для партнёраў</a> <a href='#news-volunteers'>Для добраахвотнікаў</a> </div> <h3 id='news-mission'>Наша місія</h3> <p>Bulwark — гэта адказ на запыт аб сістэмнай падтрымцы. Мы стварылі пляцоўку, якая не проста збірае данаты, а будуе мост паміж тымі, хто дапамагае, і тымі, хто на перадавой.</p> <p><b>Галоўная мэта:</b> максімальная эфектыўнасць рэсурсаў і юрыдычная бяспека кожнага байца.</p> <h3 id='news-features'>Што дае платформа?</h3> <ul> <li><b>База ведаў:</b> падрабязныя інструкцыі па легалізацыі ва Украіне, атрыманні статусаў і дакументаў.</li> <li><b>Справаздачнасць:</b> рэгулярныя публікацыі аб мэтавым выкарыстанні сродкаў.</li> <li><b>Хуткая сувязь:</b> прамы канал для зваротаў дабраахвотнікаў.</li> </ul>"
   },
   {
     "id": 4,
-    "date": "12.02.2026",
-    "title": "Стварэнне Telegram-канала",
-    "excerpt": "Мы адкрылі афіцыйны канал для навін і абнаўленняў...",
+    "date": "16.02.2026",
+    "title": "Абнаўленне раздзела «Матэрыялы»",
+    "excerpt": "Мы падрыхтавалі новыя інструкцыі па пытаннях легалізацыі і аднаўлення дакументаў...",
     "image": "/img/news/news-4.webp",
-    "content": "<h3>Афіцыйны канал</h3><p>Telegram-канал Bulwark стаў галоўнай кропкай для публікацыі навін і абнаўленняў.</p><h3>Супольнасць</h3><p>Тут мы дзелімся інфармацыяй пра новыя праграмы, справаздачы і магчымасці для валанцёрства. Канал аб’ядноўвае людзей, якія хочуць дапамагаць і быць у курсе падзей.</p>"
+    "content": "<h3>Веды — гэта абарона</h3><p>Раздзел «Матэрыялы» на нашым сайце быў значна пашыраны. Мы сабралі актуальную інфармацыю, якая дапаможа пазбегнуць прававых пастак.</p><h3>Новыя тэмы:</h3><ul><li>Падрабязныя гайды па легалізацыі ва Украіне.</li><li>Працэдуры аднаўлення страчаных дакументаў.</li><li>Аналіз рызык дэбартацыі і спосабы прававой абароны.</li></ul><p>Рэкамендуем азнаёміцца з гэтымі матэрыяламі перад падачай любых дакументаў у дзяржаўныя органы.</p>"
   },
   {
     "id": 5,
     "date": "16.02.2026",
-    "title": "Запуск платформы Bulwark: новы этап падтрымкі",
-    "excerpt": "Мы афіцыйна запускаем адзіны інфармацыйны рэсурс для дапамогі беларускім дабраахвотнікам. Празрыстасць, база ведаў і сістэмная падтрымка — зараз у адным месцы.",
+    "title": "Шукаем валанцёраў у каманду",
+    "excerpt": "Далучайцеся да падтрымкі беларускіх добраахвотнікаў. Нам патрэбна ваша дапамога ў камунікацыі і арганізацыі праектаў...",
     "image": "/img/news/news-5.webp",
-    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Місія платформы</a> <a href='#news-features'>Магчымасці</a> <a href='#news-partners'>Для партнёраў</a> <a href='#news-volunteers'>Для добраахвотнікаў</a> </div> <h3 id='news-mission'>Наша місія</h3> <p>Bulwark — гэта адказ на запыт аб сістэмнай падтрымцы. Мы стварылі пляцоўку, якая не проста збірае данаты, а будуе мост паміж тымі, хто дапамагае, і тымі, хто на перадавой.</p> <p><b>Галоўная мэта:</b> максімальная эфектыўнасць рэсурсаў і юрыдычная бяспека кожнага байца.</p> <h3 id='news-features'>Што дае платформа?</h3> <ul> <li><b>База ведаў:</b> падрабязныя інструкцыі па легалізацыі ва Украіне, атрыманні статусаў і дакументаў.</li> <li><b>Справаздачнасць:</b> рэгулярныя публікацыі аб мэтавым выкарыстанні сродкаў.</li> <li><b>Хуткая сувязь:</b> прамы канал для зваротаў дабраахвотнікаў.</li> </ul> <h3 id='news-partners'>Перавагі для партнёраў</h3> <p>Мы разумеем важнасць даверу. Таму для буйных фондаў і прыватных мецэнатаў мы забяспечваем:</p> <ul> <li>поўны аўдыт закупак;</li> <li>фота і відэа пацверджанні перадачы дапамогі;</li> <li>прамую камунікацыю з камандзірамі падраздзяленняў.</li> </ul> <h3 id='news-volunteers'>Для добраахвотнікаў</h3> <p>Калі вы беларус, які ваюе за Украіну, Bulwark — ваш тылавы памочнік. Тут вы знойдзеце адказы на складаныя пытанні: ад таго, як перавезці сям'ю, да таго, што рабіць у выпадку юрыдычных спрэчак з міграцыйнай службай.</p> <div class='note-block'>Сайт працуе ў тэставым рэжыме. Калі вы заўважылі памылку — калі ласка, паведаміце нам праз форму зваротнай сувязі.</div>"
+    "content": "<h3>Станьце часткай Bulwark</h3><p>Наш фонд шукае валанцёраў, гатовых ахвяраваць свой час і талент дзеля агульнай справы. Ваша дапамога дазволіць нам ахопліваць больш бенефіцыяраў.</p><h3>Дзе патрэбна дапамога?</h3><ul><li>Камунікацыя з добраахвотнікамі і іх сем'ямі.</li><li>Арганізацыя івэнтаў і гуманітарных сустрэч.</li><li>Падрыхтоўка інфармацыйных і дызайнерскіх матэрыялаў.</li><li>Адміністрацыйная падтрымка праектаў.</li></ul><p>Калі вы хочаце ўнесці свой унёсак у абарону чалавечай годнасці — напішыце нам праз форму на сайце.</p>"
+  },
+  {
+    "id": 6,
+    "date": "16.02.2026",
+    "title": "Заклік да экспертнага супрацоўніцтва",
+    "excerpt": "Запрашаем юрыстаў, псіхолагаў і спецыялістаў па правах чалавека далучыцца да нашых праграм...",
+    "image": "/img/news/news-6.webp",
+    "content": "<h3>Экспертная падтрымка</h3><p>Мы запрашаем да супрацоўніцтва экспертаў і экспертак у сферах права, псіхалогіі, сацыяльнай работы і медыяцыі. Ваша экспертыза — ключ да сістэмных рашэнняў.</p><h3>Што мы прапануем экспертам?</h3><ul><li>Удзел у падрыхтоўцы аналітычных матэрыялаў.</li><li>Правядзенне кансультацый для бенефіцыяраў фонду.</li><li>Распрацоўка стратэгій прававой абароны на дзяржаўным узроўні.</li></ul><p>Калі вы гатовыя падзяліцца сваім досведам і ведамі — звяжыцеся з намі для абмеркавання фармату супрацоўніцтва.</p>"
   }
 ]
