--- a/public/locales/news-ru.json
+++ b/public/locales/news-ru.json
@@ -1,42 +1,50 @@
 [
   {
     "id": 1,
-    "date": "10.01.2026",
-    "title": "Регистрация фонда Bulwark",
-    "excerpt": "Наш фонд официально зарегистрирован и начал свою деятельность...",
+    "date": "17.11.2025",
+    "title": "Начало работы фонда Bulwark",
+    "excerpt": "Мы объявляем о начале деятельности фонда для правовой и психологической поддержки белорусских добровольцев...",
     "image": "/img/news/news-1.webp",
-    "content": "<h3>Официальный старт</h3><p>Фонд Bulwark получил юридическую регистрацию. Это позволяет нам легально работать и открыто сотрудничать с партнёрами.</p><h3>Миссия</h3><p>Мы поддерживаем белорусских добровольцев в Украине через юридическую и психологическую помощь, программы по борьбе с зависимостями и создание волонтёрского хаба.</p><p>Это первый шаг к системной и прозрачной работе.</p>"
+    "content": "<h3>Системная поддержка</h3><p>Фонд Bulwark создан для оказания помощи белорусам, участвовавшим в обороне Украины и оказавшимся в уязвимом положении из-за отсутствия стабильного правового статуса и вынужденной эмиграции.</p><h3>Наши направления</h3><ul><li>Бесплатные юридические консультации по легализации.</li><li>Психологическая помощь для преодоления травматического опыта.</li><li>Работа в правозащитной логике для защиты прав бенефициаров.</li></ul><p>Наша цель — обеспечить достойное и безопасное будущее для тех, кто рисковал жизнью ради свободы.</p>"
   },
   {
     "id": 2,
-    "date": "15.01.2026",
-    "title": "Приобретение домена для сайта",
-    "excerpt": "Мы приобрели собственный домен и готовим площадку для коммуникации...",
+    "date": "01.12.2025",
+    "title": "Запуск официальных социальных сетей",
+    "excerpt": "Теперь Bulwark доступен в Telegram, Instagram, Facebook и LinkedIn для более плотной коммуникации...",
     "image": "/img/news/news-2.webp",
-    "content": "<h3>Собственная площадка</h3><p>Фонд Bulwark получил собственный домен, который станет основой для нашего сайта.</p><h3>Удобство и прозрачность</h3><p>На сайте будут размещаться новости, отчёты и инструкции для добровольцев. Это важный шаг для создания надёжной информационной базы.</p>"
+    "content": "<h3>Будем на связи</h3><p>Мы открыли официальные страницы в популярных социальных сетях. Это позволит нам быть ближе к нашим бенефициарам и обществу.</p><h3>Что вы найдете в наших сетях?</h3><ul><li>Оперативные новости о деятельности фонда.</li><li>Разъяснения сложных правовых процедур.</li><li>Истории и возможности для поддержки.</li><li>Обновления для добровольцев и их семей.</li></ul>"
   },
   {
     "id": 3,
-    "date": "05.02.2026",
-    "title": "Запуск Telegram-бота",
-    "excerpt": "Мы создали Telegram-бот для быстрой коммуникации и поддержки...",
+    "date": "16.02.2026",
+    "title": "Запуск платформы Bulwark: новый этап поддержки",
+    "excerpt": "Мы официально запускаем единый информационный ресурс для помощи белорусским добровольцам. Прозрачность, база знаний и системная поддержка — теперь в одном месте.",
     "image": "/img/news/news-3.webp",
-    "content": "<h3>Новый инструмент</h3><p>Telegram-бот фонда Bulwark помогает получать новости, находить контакты и быстро присоединяться к волонтёрским программам.</p><h3>Доступность</h3><p>Бот работает круглосуточно и делает коммуникацию более простой и эффективной.</p>"
+    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Миссия платформы</a> <a href='#news-features'>Возможности</a> <a href='#news-partners'>Для партнеров</a> <a href='#news-volunteers'>Для добровольцев</a> </div> <h3 id='news-mission'>Наша миссия</h3> <p>Bulwark — это ответ на запрос о системной поддержке. Мы создали площадку, которая не просто собирает донаты, а строит мост между теми, кто помогает, и теми, кто на передовой.</p> <p><b>Главная цель:</b> максимальная эффективность ресурсов и юридическая безопасность каждого бойца.</p> <h3 id='news-features'>Что дает платформа?</h3> <ul> <li><b>База знаний:</b> подробные инструкции по легализации в Украине, получению статусов и документов.</li> <li><b>Отчетность:</b> регулярные публикации о целевом использовании средств.</li> <li><b>Быстрая связь:</b> прямой канал для обращений добровольцев.</li> </ul>"
   },
   {
     "id": 4,
-    "date": "12.02.2026",
-    "title": "Создание Telegram-канала",
-    "excerpt": "Мы открыли официальный канал для новостей и обновлений...",
+    "date": "16.02.2026",
+    "title": "Обновление раздела «Материалы»",
+    "excerpt": "Мы подготовили новые инструкции по вопросам легализации и восстановления документов...",
     "image": "/img/news/news-4.webp",
-    "content": "<h3>Официальный канал</h3><p>Telegram-канал Bulwark стал главной точкой для публикации новостей и обновлений.</p><h3>Сообщество</h3><p>Здесь мы делимся информацией о новых программах, отчётах и возможностях для волонтёрства. Канал объединяет людей, которые хотят помогать и быть в курсе событий.</p>"
+    "content": "<h3>Знания — это защита</h3><p>Раздел «Материалы» на нашем сайте был значительно расширен. Мы собрали актуальную информацию, которая поможет избежать правовых ловушек.</p><h3>Новые темы:</h3><ul><li>Подробные гайды по легализации в Украине.</li><li>Процедуры восстановления утерянных документов.</li><li>Анализ рисков депортации и способы правовой защиты.</li></ul><p>Рекомендуем ознакомиться с этими материалами перед подачей любых документов в государственные органы.</p>"
   },
   {
     "id": 5,
     "date": "16.02.2026",
-    "title": "Запуск платформы Bulwark: новый этап поддержки",
-    "excerpt": "Мы официально запускаем единый информационный ресурс для помощи белорусским добровольцам. Прозрачность, база знаний и системная поддержка — теперь в одном месте.",
+    "title": "Ищем волонтеров в команду",
+    "excerpt": "Присоединяйтесь к поддержке белорусских добровольцев. Нам нужна ваша помощь в коммуникации и организации проектов...",
     "image": "/img/news/news-5.webp",
-    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Миссия платформы</a> <a href='#news-features'>Возможности</a> <a href='#news-partners'>Для партнеров</a> <a href='#news-volunteers'>Для добровольцев</a> </div> <h3 id='news-mission'>Наша миссия</h3> <p>Bulwark — это ответ на запрос о системной поддержке. Мы создали площадку, которая не просто собирает донаты, а строит мост между теми, кто помогает, и теми, кто на передовой.</p> <p><b>Главная цель:</b> максимальная эффективность ресурсов и юридическая безопасность каждого бойца.</p> <h3 id='news-features'>Что дает платформа?</h3> <ul> <li><b>База знаний:</b> подробные инструкции по легализации в Украине, получению статусов и документов.</li> <li><b>Отчетность:</b> регулярные публикации о целевом использовании средств.</li> <li><b>Быстрая связь:</b> прямой канал для обращений добровольцев.</li> </ul> <h3 id='news-partners'>Преимущества для партнеров</h3> <p>Мы понимаем важность доверия. Поэтому для крупных фондов и частных меценатов мы обеспечиваем:</p> <ul> <li>полный аудит закупок;</li> <li>фото и видео подтверждения передачи помощи;</li> <li>прямую коммуникацию с командирами подразделений.</li> </ul> <h3 id='news-volunteers'>Для добровольцев</h3> <p>Если вы белорус, воюющий за Украину, Bulwark — ваш тыловой помощник. Здесь вы найдете ответы на сложные вопросы: от того, как перевезти семью, до того, что делать в случае юридических споров с миграционной службой. </p> <div class='note-block'>Сайт работает в тестовом режиме. Если вы заметили ошибку — пожалуйста, сообщите нам через форму обратной связи.</div>"
+    "content": "<h3>Станьте частью Bulwark</h3><p>Наш фонд ищет волонтеров, готовых пожертвовать свое время и талант ради общего дела. Ваша помощь позволит нам охватывать больше бенефициаров.</p><h3>Где нужна помощь?</h3><ul><li>Коммуникация с добровольцами и их семьями.</li><li>Организация ивентов и гуманитарных встреч.</li><li>Подготовка информационных и дизайнерских материалов.</li><li>Административная поддержка проектов.</li></ul><p>Если вы хотите внести свой вклад в защиту человеческого достоинства — напишите нам через форму на сайте.</p>"
+  },
+  {
+    "id": 6,
+    "date": "16.02.2026",
+    "title": "Призыв к экспертному сотрудничеству",
+    "excerpt": "Приглашаем юристов, психологов и специалистов по правам человека присоединиться к нашим программам...",
+    "image": "/img/news/news-6.webp",
+    "content": "<h3>Экспертная поддержка</h3><p>Мы приглашаем к сотрудничеству экспертов в сферах права, психологии, социальной работы и медиации. Ваша экспертиза — ключ к системным решениям.</p><h3>Что мы предлагаем экспертам?</h3><ul><li>Участие в подготовке аналитических материалов.</li><li>Проведение консультаций для бенефициаров фонда.</li><li>Разработка стратегий правовой защиты на государственном уровне.</li></ul><p>Если вы готовы поделиться своим опытом и знаниями — свяжитесь с нами для обсуждения формата сотрудничества.</p>"
   }
 ]
