--- a/public/locales/news-uk.json
+++ b/public/locales/news-uk.json
@@ -1,42 +1,50 @@
 [
   {
     "id": 1,
-    "date": "10.01.2026",
-    "title": "Реєстрація фонду Bulwark",
-    "excerpt": "Наш фонд офіційно зареєстрований і розпочав свою діяльність...",
+    "date": "17.11.2025",
+    "title": "Початок роботи фонду Bulwark",
+    "excerpt": "Ми оголошуємо про початок діяльності фонду для правової та психологічної підтримки білоруських добровольців...",
     "image": "/img/news/news-1.webp",
-    "content": "<h3>Офіційний старт</h3><p>Фонд Bulwark отримав юридичну реєстрацію. Це дозволяє нам легально працювати та відкрито співпрацювати з партнерами.</p><h3>Місія</h3><p>Ми підтримуємо білоруських добровольців в Україні через юридичну та психологічну допомогу, програми боротьби із залежностями та створення волонтерського хабу.</p><p>Це перший крок до системної та прозорої роботи.</p>"
+    "content": "<h3>Системна підтримка</h3><p>Фонд Bulwark створений для надання допомоги білорусам, які брали участь у захисті України та опинилися у вразливому становищі через відсутність стабільного правового статусу та вимушену еміграцію.</p><h3>Наші напрямки</h3><ul><li>Безкоштовні юридичні консультації з легалізації.</li><li>Психологічна допомога для подолання травматичного досвіду.</li><li>Робота в правозахисній логіці для захисту прав бенефіціарів.</li></ul><p>Наша мета — забезпечити гідне та безпечне майбутнє для тих, хто ризикував життям заради свободи.</p>"
   },
   {
     "id": 2,
-    "date": "15.01.2026",
-    "title": "Придбання домену для сайту",
-    "excerpt": "Ми придбали власний домен і готуємо платформу для комунікації...",
+    "date": "01.12.2025",
+    "title": "Запуск офіційних соціальних мереж",
+    "excerpt": "Тепер Bulwark доступний у Telegram, Instagram, Facebook та LinkedIn для тіснішої комунікації...",
     "image": "/img/news/news-2.webp",
-    "content": "<h3>Власна платформа</h3><p>Фонд Bulwark отримав власний домен, який стане основою для нашого сайту.</p><h3>Зручність і прозорість</h3><p>На сайті будуть розміщуватися новини, звіти та інструкції для добровольців. Це важливий крок для створення надійної інформаційної бази.</p>"
+    "content": "<h3>Будемо на зв'язку</h3><p>Ми відкрили офіційні сторінки в популярних соціальних мережах. Це дозволить нам бути ближче до наших бенефіціарів та суспільства.</p><h3>Що ви знайдете в наших мережах?</h3><ul><li>Оперативні новини про діяльність фонду.</li><li>Пояснення складних правових процедур.</li><li>Історії та можливості для підтримки.</li><li>Оновлення для добровольців та їхніх родин.</li></ul>"
   },
   {
     "id": 3,
-    "date": "05.02.2026",
-    "title": "Запуск Telegram-бота",
-    "excerpt": "Ми створили Telegram-бот для швидкої комунікації та підтримки...",
+    "date": "16.02.2026",
+    "title": "Запуск платформи Bulwark: новий етап підтримки",
+    "excerpt": "Ми офіційно запускаємо єдиний інформаційний ресурс для допомоги білоруським добровольцям. Прозорість, база знань та системна підтримка — тепер в одному місці.",
     "image": "/img/news/news-3.webp",
-    "content": "<h3>Новий інструмент</h3><p>Telegram-бот фонду Bulwark допомагає отримувати новини, знаходити контакти та швидко долучатися до волонтерських програм.</p><h3>Доступність</h3><p>Бот працює цілодобово та робить комунікацію більш простою й ефективною.</p>"
+    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Місія платформи</a> <a href='#news-features'>Можливості</a> <a href='#news-partners'>Для партнерів</a> <a href='#news-volunteers'>Для добровольців</a> </div> <h3 id='news-mission'>Наша місія</h3> <p>Bulwark — це відповідь на запит про системну підтримку. Ми створили майданчик, який не просто збирає донати, а будує міст між тими, хто допомагає, і тими, хто на передовій.</p> <p><b>Головна мета:</b> максимальна ефективність ресурсів та юридична безпека кожного бійця.</p> <h3 id='news-features'>Що дає платформа?</h3> <ul> <li><b>База знань:</b> детальні інструкції з легалізації в Україні, отримання статусів та документів.</li> <li><b>Звітність:</b> регулярні публікації про цільове використання коштів.</li> <li><b>Швидкий зв'язок:</b> прямий канал для звернень добровольців.</li> </ul>"
   },
   {
     "id": 4,
-    "date": "12.02.2026",
-    "title": "Створення Telegram-каналу",
-    "excerpt": "Ми відкрили офіційний канал для новин та оновлень...",
+    "date": "16.02.2026",
+    "title": "Оновлення розділу «Матеріали»",
+    "excerpt": "Ми підготували нові інструкції з питань легалізації та відновлення документів...",
     "image": "/img/news/news-4.webp",
-    "content": "<h3>Офіційний канал</h3><p>Telegram-канал Bulwark став головною точкою для публікації новин та оновлень.</p><h3>Спільнота</h3><p>Тут ми ділимося інформацією про нові програми, звіти та можливості для волонтерства. Канал об’єднує людей, які хочуть допомагати та бути в курсі подій.</p>"
+    "content": "<h3>Знання — це захист</h3><p>Розділ «Матеріали» на нашому сайті був значно розширений. Ми зібрали актуальну інформацію, яка допоможе уникнути правових пасток.</p><h3>Нові теми:</h3><ul><li>Детальні гайди з легалізації в Україні.</li><li>Процедури відновлення втрачених документів.</li><li>Аналіз ризиків депортації та способи правового захисту.</li></ul><p>Рекомендуємо ознайомитися з цими матеріалами перед подачею будь-яких документів до державних органів.</p>"
   },
   {
     "id": 5,
     "date": "16.02.2026",
-    "title": "Запуск платформи Bulwark: новий етап підтримки",
-    "excerpt": "Ми офіційно запускаємо єдиний інформаційний ресурс для допомоги білоруським добровольцям. Прозорість, база знань та системна підтримка — тепер в одному місці.",
+    "title": "Шукаємо волонтерів у команду",
+    "excerpt": "Приєднуйтесь до підтримки білоруських добровольців. Нам потрібна ваша допомога у комунікації та організації проєктів...",
     "image": "/img/news/news-5.webp",
-    "content": "<div class='modal-nav-internal'> <a href='#news-mission'>Місія платформи</a> <a href='#news-features'>Можливості</a> <a href='#news-partners'>Для партнерів</a> <a href='#news-volunteers'>Для добровольців</a> </div> <h3 id='news-mission'>Наша місія</h3> <p>Bulwark — це відповідь на запит про системну підтримку. Ми створили майданчик, який не просто збирає донати, а будує міст між тими, хто допомагає, і тими, хто на передовій.</p> <p><b>Головна мета:</b> максимальна ефективність ресурсів та юридична безпека кожного бійця.</p> <h3 id='news-features'>Що дає платформа?</h3> <ul> <li><b>База знань:</b> детальні інструкції з легалізації в Україні, отримання статусів та документів.</li> <li><b>Звітність:</b> регулярні публікації про цільове використання коштів.</li> <li><b>Швидкий зв'язок:</b> прямий канал для звернень добровольців.</li> </ul> <h3 id='news-partners'>Переваги для партнерів</h3> <p>Ми розумємо важливост і доверу. Тому для великих фондiв та приватних меценатiв ми забезпечуємо:</p> <ul> <li>повний аудит закупiвлей;</li> <li>фото та вiдео пiдтвердження передачi допомоги;</li> <li>пряму комунiкацiю з командирами пiдроздiлiв.</li></ul><h3 id='news-volunteers'>Для добровольцiв</h3><p >Якщо ви бiлорус, який воює за Україну, Bulwark — ваш тиловий помочник. Тут ви знайдете вiдповiдi на складнi запитання: вiд того, як перевезти сiëм'ю, до того, що робити у разi юридичних суперечок з миграцйною службою.</p><div class='note-block'>Сайт працує в тестовому режим i. Якщо ви помiтили помилку — будь ласка, пов iдомте нам через форму зворотного звязку.</div>"
+    "content": "<h3>Станьте частиною Bulwark</h3><p>Наш фонд шукає волонтерів, готових пожертвувати свій час та талант заради спільної справи. Ваша допомога дозволить нам охоплювати більше бенефіціарів.</p><h3>Де потрібна допомога?</h3><ul><li>Комунікація з добровольцями та їхніми родинами.</li><li>Організація івентів та гуманітарних зустрічей.</li><li>Підготовка інформаційних та дизайнерських матеріалів.</li><li>Адміністративна підтримка проєктів.</li></ul><p>Якщо ви хочете зробити свій внесок у захист людської гідності — напишіть нам через форму на сайті.</p>"
+  },
+  {
+    "id": 6,
+    "date": "16.02.2026",
+    "title": "Заклик до експертної співпраці",
+    "excerpt": "Запрошуємо юристів, психологів та фахівців з прав людини приєднатися до наших програм...",
+    "image": "/img/news/news-6.webp",
+    "content": "<h3>Експертна підтримка</h3><p>Ми запрошуємо до співпраці експертів та експерток у сферах права, психології, соціальної роботи та медіації. Ваша експертиза — ключ до системних рішень.</p><h3>Що ми пропонуємо експертам?</h3><ul><li>Участь у підготовці аналітичних матеріалів.</li><li>Проведення консультацій для бенефіціарів фонду.</li><li>Розробка стратегій правового захисту на державному рівні.</li></ul><p>Якщо ви готові поділитися своїм досвідом та знаннями — зв'яжіться з нами для обговорення формату співпраці.</p>"
   }
 ]
