feat: implement SEO optimization, Open Graph tags and multi-language title switching

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -1,4 +1,8 @@
 {
+  "seo": {
+    "title": "Bulwark Fund | Дапамога беларускім добраахвотнікам",
+    "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне."
+  },
   "nav": {
     "location": "Ukraine",
     "about": "Пра фонд",
