--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,8 @@
 {
+  "seo": {
+    "title": "Bulwark Fund | Support for Belarusian Volunteers",
+    "description": "Charitable foundation Bulwark. Assistance for Belarusian fighters in Ukraine."
+  },
   "nav": {
     "location": "Ukraine",
     "about": "About the Fund",
