--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,4 +1,8 @@
 {
+  "seo": {
+    "title": "Bulwark Fund | Помощь белорусским добровольцам",
+    "description": "Благотворительный фонд Bulwark. Поддержка белорусских воинов в Украине."
+  },
   "nav": {
     "location": "Ukraine",
     "about": "О фонде",
