feat: complete dynamic i18n SEO for index page (meta, OG, Twitter) across all languages

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,7 +1,9 @@
 {
   "seo": {
-    "title": "Bulwark Fund | Support for Belarusian Volunteers",
-    "description": "Charitable foundation Bulwark. Assistance for Belarusian fighters in Ukraine."
+    "title": "Bulwark Fund | Help for Belarusian volunteers",
+    "description": "Bulwark Charity Fund. Supporting Belarusian warriors in Ukraine: legal aid, rehabilitation, and resource reserve. Join us!",
+    "og_title": "Bulwark Fund | BY / EN",
+    "og_description": "Support for Belarusian volunteers in Ukraine. Help us defend freedom."
   },
   "nav": {
     "location": "Ukraine",
