--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -1,7 +1,9 @@
 {
   "seo": {
     "title": "Bulwark Fund | Помощь белорусским добровольцам",
-    "description": "Благотворительный фонд Bulwark. Поддержка белорусских воинов в Украине."
+    "description": "Благотворительный фонд Bulwark. Поддержка белорусских воинов в Украине: юридическая помощь, реабилитация, кадровый резерв. Присоединяйся!",
+    "og_title": "Bulwark Fund | BY / EN",
+    "og_description": "Помощь белорусским добровольцам в Украине. Поддержите воинов света в их борьбе."
   },
   "nav": {
     "location": "Ukraine",
