--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -1,7 +1,9 @@
 {
   "seo": {
-    "title": "Bulwark Fund | Дапамога беларускім добраахвотнікам",
-    "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне."
+    "title": "Bulwark Fund | Допомога білоруським добровольцям",
+    "description": "Благодійний фонд Bulwark. Підтримка білоруських воїнів в Україні: юридична допомога, реабілітація, кадровий резерв. Приєднуйся!",
+    "og_title": "Bulwark Fund | BY / EN",
+    "og_description": "Допомога білоруським добровольцям в Україні. Підтримайте тих, хто бореться за нашу і вашу свободу."
   },
   "nav": {
     "location": "Ukraine",
