--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -1,7 +1,9 @@
 {
   "seo": {
     "title": "Bulwark Fund | Дапамога беларускім добраахвотнікам",
-    "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне."
+    "description": "Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся!",
+    "og_title": "Bulwark Fund | BY / EN",
+    "og_description": "Дапамога беларускім добраахвотнікам. Support for Belarusian volunteers in Ukraine."
   },
   "nav": {
     "location": "Ukraine",
